# ProyectoTecnologo_RoboticHandDRL

./: .gitattributes  LICENSE-APACHE-2.0  LICENSE-CC-BY-4.0  README.md  run_all.sh
Desarrollo/Electrónica/: data_analysis.py  (+1 more)
Desarrollo/simulation/ros2_robotic_hand_ws/src/robotic_hand/: CMakeLists.txt
Desarrollo/simulation/ros2_robotic_hand_ws/src/robotic_hand/config/: hand_controllers.yaml  robotic_hand_v1.rviz
Desarrollo/simulation/ros2_robotic_hand_ws/src/robotic_hand/description/: robotic_hand.urdf.xacro
Desarrollo/simulation/ros2_robotic_hand_ws/src/robotic_hand/launch/: robotic_hand_gazebo.launch.py  ros_gazebo.launch.py  ros_rviz.launch.py
Desarrollo/simulation/ros2_robotic_hand_ws/src/robotic_hand/meshes/: anular_link2.STL  medio_link0.STL  pulgar_link0.STL
Desarrollo/simulation/ros2_robotic_hand_ws/src/robotic_hand/scripts/: agent_controller.py  finger_control.py  test_control01.py
Desarrollo/simulation/ros2_robotic_hand_ws/src/robotic_hand/scripts/Env03/: Full_Agent.py  buffer.py  custom_hand_env.py  notebook.ipynb  td3_torch.py  test.py
Desarrollo/simulation/ros2_robotic_hand_ws/src/robotic_hand/scripts/Env03/DataSets/: ImagesEditor.xcf
Desarrollo/simulation/ros2_robotic_hand_ws/src/robotic_hand/scripts/Env03/logs/: events.out.tfevents.1737583763.Apolo-Nitro-PK.17418.0  events.out.tfevents.1737584721.Apolo-Nitro-PK.19973.0  events.out.tfevents.1737584829.Apolo-Nitro-PK.20419.0  (+16 more)
Desarrollo/simulation/ros2_robotic_hand_ws/src/robotic_hand/urdf/: RoboticHand01.urdf
Desarrollo/simulation/ros2_robotic_hand_ws/src/robotic_hand/worlds/: empty.sdf
(+2114 files in other folders)
